[package]
name = "rapidcron"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "simple-executor"
path = "src/bin/simple-executor.rs"

[[bin]]
name = "rapidcron"
path = "src/main.rs"

[dependencies]
#async runtime
tokio = { version = "1.0", features = ["full"] }

# cron parsing
cron = "0.15"

# configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"

# time handling
time = { version = "0.3", features = ["local-offset", "formatting"] }
chrono = { version = "0.4", features = ["serde"] }

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "json",
    "env-filter",
    "local-time",
] }
tracing-appender = "0.2"

# error handling
anyhow = "1.0"
thiserror = "2.0"

# mongodb
mongodb = { version = "3.0" }
bson = { version = "2.0", features = ["chrono-0_4"] }
futures = "0.3"
urlencoding = "2.1"

# etcd
etcd-client = "0.14"

# rabbitmq
lapin = "2.5"
amq-protocol-types = "7.0"

# http server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json"] }

# test dependencies
uuid = { version = "1.0", features = ["v4"] }
tokio-test = "0.4"
rand = "0.8"

# system monitoring
sysinfo = "0.32"
serde_with = "3.17.0"

[dev-dependencies]
# 测试时需要的依赖
rapidcron = { path = "." }
criterion = "0.5"

[[bench]]
name = "cron_parser_bench"
harness = false

[[bench]]
name = "task_creation_bench"
harness = false

[[bench]]
name = "task_query_bench"
harness = false

[[bench]]
name = "retry_calculation_bench"
harness = false
